2012-06-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Check for ieee1275 and not ieee1276.

2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta6.

2012-05-31  Christer Weinigel <christer@weinigel.se>

	* grub-core/normal/main.c (grub_file_getline): Fix off-by-one error.

2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Use right version.
	(grub_cmd_linux): Likewise.

2012-05-31  Christer Weinigel <christer@weinigel.se>

	Fix EHCI low-speed.

	* grub-core/bus/usb/ehci.c (GRUB_EHCI_MULT_ONE): Fix the value.
	(GRUB_EHCI_MULT_TWO): Likewise.
	(GRUB_EHCI_MULT_THREE): Likewise.
	(GRUB_EHCI_CMASK_MASK): New enum value.
	(GRUB_EHCI_SMASK_MASK): Likewise.
	(GRUB_EHCI_CMASK_OFF): Likewise.
	(GRUB_EHCI_SMASK_OFF): Likewise.
	(grub_ehci_pci_iter): Enable periodic schedule.
	(grub_ehci_parse_notrun): Likewise.
	(grub_ehci_restore_hw): Likewise.
	(grub_ehci_setup_qh): Set flags for low speed transfers.
	(grub_ehci_find_qh): Use periodic list for low speed.
	(grub_ehci_setup_transfer): Check periodic queue as well.
	(grub_ehci_check_transfer): Likewise.
	(grub_ehci_cancel_transfer): Cancel periodic transfer.

2012-05-31  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	* util/grub-install.in: Write core.elf in PReP even if the --no-nvram
	parameter is used.

2012-05-31  Peter Jones <pjones@redhat.com>

	* include/grub/i386/linux.h (linux_kernel_params): Add v206.
	* grub-core/loader/i386/linux.c (grub_linux_boot): Use v206.
	(grub_cmd_linux) [__x86_64__]: Validate grub_efi_system_table.

2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Fix overflow and
	uninited variable. Allocate at least setup_sects.

2012-05-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of EFI with big memory maps.

	* grub-core/loader/i386/linux.c (GRUB_LINUX_CL_OFFSET): Removed.
	(real_mode_mem): Likewise.